# freebsd-kernel-module-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  md.c  rust-toolchain.toml  x86_64-kernel-freebsd.json
bsd-kernel/: Cargo.toml
bsd-kernel/src/: allocator.rs  character_device.rs  io.rs  lib.rs  uio.rs
kernel-sys/: Cargo.toml  Makefile  build.rs  vnode_if.h  wrapper.h
module-geom_md/: Cargo.toml
module-geom_md/src/: lib.rs
module-hello/: Cargo.toml
module-hello/src/: lib.rs  module.rs
