[package]
name = "kernel-sys"
version = "0.1.0"
authors = ["David Young <david.young@nccgroup.com>"]
edition = "2024"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
bindgen = "0.71.1"
